[package]
name = "poker-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_server"
path = "src/lib.rs"

[[bin]]
name = "poker-server"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.0", features = ["server", "http1", "client"] }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"
pretty_env_logger = "0.5"
bytes = "1.10.1"
async-trait = "0.1"
axum = "0.8.6"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
tower = "0.5.2"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

